fix: mainpage reservation list align

--- a/src/components/Members/MyPage/MyPage.module.css
+++ b/src/components/Members/MyPage/MyPage.module.css
@@ -103,7 +103,7 @@
   }
   
   .statValue {
-    color: #ff0000;
+    color: #c72e2e;
     font-size: 24px;
     font-weight: 700;
     margin-top: 18px;
